# aiondemand

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  ISSUE_158_INVESTIGATION.md  LICENSE  README.md  SETUP.md  SOLUTION_SUMMARY.md  example.ipynb  griffe_extensions.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  results.csv  setup.py  sitemap.xml  w.py  x.py  y.py
.github/workflows/: auto-update-indexes.yml  docs.yml  integration-tests.yml  release.yaml  tests.yml
api/aiod/: index.html
api/authentication/: index.html
api/bookmarks/: index.html
api/case_studies/: case_studies.md  index.html
api/computational_assets/: computational_assets.md  index.html
api/configuration/: index.html
api/contacts/: index.html
api/datasets/: index.html
api/educational_resources/: index.html
api/events/: index.html
api/experiments/: index.html
api/ml_models/: index.html  ml_models.md
api/news/: index.html  news.md
api/organisations/: index.html  organisations.md
api/persons/: index.html
api/projects/: index.html
api/publications/: index.html
api/services/: index.html  services.md
api/taxonomies/: index.html
api/teams/: index.html
assets/javascripts/: bundle.79ae519e.min.js  bundle.af256bd8.min.js
build_tools/: run_examples.sh
changelog/: index.html
conduct/: index.html
contributing/: index.html
developer_setup/: index.html
docs/: AIoDEntryCreate.md  AIoDEntryRead.md  Address.md  BodyHuggingFaceUploadUploadDatasetsIdentifierHuggingfacePost.md  CaseStudiesApi.md  CaseStudyCreate.md  CaseStudyRead.md  ComputationalAssetCreate.md  ComputationalAssetRead.md  ComputationalAssetsApi.md  ContactCreate.md  ContactRead.md  ContactsApi.md  DatasetCreate.md  DatasetRead.md  DatasetSize.md  DatasetsApi.md  DcatAPContext.md  DcatAPDataset.md  DcatAPDistribution.md  DcatAPIdentifier.md  DcatApWrapper.md  DcatLocation.md  DctPeriodOfTime.md  DefaultApi.md  Distribution.md  EducationalResourceCreate.md  EducationalResourceRead.md  EducationalResourcesApi.md  EnumsApi.md  EventCreate.md  EventRead.md  EventsApi.md  ExperimentCreate.md  ExperimentRead.md  ExperimentsApi.md  Geo.md  Location.md  MLModelCreate.md  MLModelRead.md  (+52 more)
docs/api/: aiod.md  authentication.md  bookmarks.md  configuration.md  datasets.md  educational_resources.md  index.md  objects.md  platforms.md  publications.md  reference.md  taxonomies.md
docs/examples/: browsing.ipynb  getting-started.ipynb  model-sharing.ipynb  models.ipynb  sharing.ipynb
docs/guides/: sharing-models.md  using-models.md
docs/stylesheets/: extra.css
docs/tools/: asset_type_replacer.py  griffe_extensions.py
example/: index.html
examples/: design_mocks.ipynb  design_mockups.ipynb
examples/getting-started/: index.html
examples/sharing/: index.html  sharing.ipynb
search/: search_index.json
src/aiod/: __init__.py  __version__.py  _client.py  _get.py  bookmarks.py  cross_linkage.py  crosslink_cli.py  crosslinker.py  exceptions.py  linkage_cli.py  linkage_extractor.py  reviews.py  submissions.py
src/aiod_py_sdk/: __init__.py
src/aiod_sdk/: README.md  __init__.py  aiod.py  pyproject.toml
stylesheets/: extra.css
swagger_client/: __init__.py  api_client.py  configuration.py
swagger_client/api/: __init__.py  case_studies_api.py  computational_assets_api.py  contacts_api.py  datasets_api.py  default_api.py  educational_resources_api.py  enums_api.py  events_api.py  experiments_api.py  ml_models_api.py  news_api.py  organisations_api.py  parents_api.py  persons_api.py  platforms_api.py  projects_api.py  publications_api.py  services_api.py  teams_api.py  upload_api.py
swagger_client/models/: __init__.py  address.py  aio_d_entry_create.py  aio_d_entry_read.py  body_hugging_face_upload_upload_datasets_identifier_huggingface_post.py  case_study_create.py  case_study_read.py  computational_asset_create.py  computational_asset_read.py  contact_create.py  contact_read.py  dataset_create.py  dataset_read.py  dataset_size.py  dcat_ap_context.py  dcat_ap_dataset.py  dcat_ap_distribution.py  dcat_ap_identifier.py  dcat_ap_wrapper.py  dcat_location.py  dct_period_of_time.py  geo.py  (+38 more)
test/: test_address.py  test_aio_d_entry_create.py  test_aio_d_entry_read.py  test_body_hugging_face_upload_upload_datasets_identifier_huggingface_post.py  test_case_studies_api.py  test_case_study_create.py  test_case_study_read.py  test_computational_asset_create.py  test_computational_asset_read.py  test_computational_assets_api.py  test_contact_create.py  test_contact_read.py  test_contacts_api.py  test_dataset_create.py  test_dataset_read.py  test_dataset_size.py  test_datasets_api.py  test_dcat_ap_context.py  test_dcat_ap_dataset.py  test_dcat_ap_distribution.py  test_dcat_ap_identifier.py  test_dcat_ap_wrapper.py  test_dcat_location.py  test_dct_period_of_time.py  test_default_api.py  test_distribution.py  test_educational_resource_create.py  test_educational_resource_read.py  test_educational_resources_api.py  test_enums_api.py  test_event_create.py  test_event_read.py  test_events_api.py  test_experiment_create.py  test_experiment_read.py  test_experiments_api.py  test_geo.py  test_http_validation_error.py  test_location.py  test_ml_model_create.py  (+41 more)
tests/: conftest.py  test_aiod_py_sdk.py  test_authentication.py  test_authorisation.py  test_base.py  test_bookmarks.py  test_calls.py  test_config.py  test_contracts.py  test_counts.py  test_cross_linkage.py  test_crosslinker.py  test_debug_logging.py  test_endpoints.py  test_integration.py  test_integration_mocked.py  test_invalid_json_response.py  test_issue_147_148.py  test_linkage_extractor.py  test_model_versioning.py  test_objects.py  test_papers.py  test_preindex.py  test_preindex_external.py  test_preindex_sklearn.py  test_progress_bar.py  test_resource_models.py  test_retries.py  test_retry.py  test_reviews.py  test_submissions.py  test_update_library_indexes.py  test_url_bugs.py  test_utils.py  test_version_switching.py  utils.py
tools/: asset_type_replacer.py  griffe_extensions.py
(+281 files in other folders)
