[project]
name = "aiondemand"
description = "Python SDK for the AIoD metadata catalogue"
authors = [
  { name = "Jean Matias", email = "smatias.jean@gmail.com" },
  { name = "Pieter Gijsbers", email = "p.gijsbers@tue.nl" },
]
readme = "docs/README.md"
requires-python = ">=3.10"
license = "MIT"
dynamic = ["version"]

dependencies = [
    "aiohttp",
    "pandas",
    "python-keycloak",
    "requests",
    "scikit-base",
    "tomlkit",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "responses",
    "aioresponses",
    "pytest",
    "pytest-asyncio",
    "ruff",
]
doc = [
    "mkdocs-material",
    "mkdocstrings-python",
    "mkdocs-jupyter",
]
tests_integrations = [
    "scikit-learn",
]

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://www.aiod.eu"
Documentation = "https://aiondemand.github.io/aiondemand/"
Repository = "https://github.com/aiondemand/aiondemand"
Issues = "https://github.com/aiondemand/aiondemand/issues"
Changelog = "https://aiondemand.github.io/aiondemand/changelog/"

[tool.hatch.version]
path = "src/aiod/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aiod"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.6"
version_files = ["pyproject.toml:version", "src/aiod/__init__.py:__version__"]

[project.entry-points."mkdocs.plugins"]
asset-type-replacer = "docs.tools.asset_type_replacer:AssetTypeReplacer"

[tool.pytest.ini_options]
markers = [
    "server: connects to an AIoD server",
]
addopts = "-m 'not server'"

[tool.ruff]
fix = true
line-length = 88
exclude = ["__pycache__", ".venv", "build", "dist", ".git"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "C4", "D", "T20"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "N806", # allow uppercase variable names in funtion
#    "D407",
#    "D408",
]
#extend-select = ["D416"]

[tool.ruff.lint.pep8-naming]
ignore-names = ["AiodPkg__*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
